gdatetime: fix floating-point conversion

Conversion from floating point to integer requires special care.

https://bugzilla.gnome.org/show_bug.cgi?id=697715